@@ -1,7 +1,7 @@
 from __future__ import annotations
 
 from typing import List, Optional
-from fastapi import APIRouter, Depends, status, Query
+from fastapi import APIRouter, Depends, status, Query, HTTPException
 from sqlalchemy.ext.asyncio import AsyncSession
 from sqlalchemy import select
 
@@ -46,19 +46,71 @@ async def list_credentials(
         stmt = stmt.where(m.Credential.connector_name == connector_name)
     res = await db.execute(stmt)
     rows = list(res.scalars().all())
-    # Decrypt in-memory for response (but do not include secrets by default)
     return rows
 
-@router.post("/", response_model=CredentialOut, status_code=status.HTTP_201_CREATED)
-async def create_credential(payload: CredentialCreate, db: AsyncSession = Depends(get_db)) -> m.Credential:
-    obj = m.Credential(
-        organization_id=payload.organization_id,
-        user_id=payload.user_id,
-        connector_name=payload.connector_name,
-        provider_key=payload.provider_key,
-        credential_json=encrypt_dict(payload.credential_json),
-    )
-    db.add(obj)
+@router.get("/{cred_id}")
+async def get_credential(cred_id: uuid.UUID, db: AsyncSession = Depends(get_db)) -> dict:
+    row = await db.get(m.Credential, cred_id)
+    if row is None:
+        raise HTTPException(status_code=404, detail="Credential not found")
+    # Redact secret by default; return metadata and id only
+    return {
+        "id": str(row.id),
+        "organization_id": str(row.organization_id),
+        "user_id": str(row.user_id),
+        "connector_name": row.connector_name,
+        "provider_key": row.provider_key,
+    }
+
+class CredentialUpdate(BaseModel):
+    provider_key: Optional[str] = None
+    credential_json: Optional[dict] = None
+
+@router.patch("/{cred_id}", response_model=CredentialOut)
+async def update_credential(cred_id: uuid.UUID, payload: CredentialUpdate, db: AsyncSession = Depends(get_db)) -> m.Credential:
+    row = await db.get(m.Credential, cred_id)
+    if row is None:
+        raise HTTPException(status_code=404, detail="Credential not found")
+    if payload.provider_key is not None:
+        row.provider_key = payload.provider_key
+    if payload.credential_json is not None:
+        row.credential_json = encrypt_dict(payload.credential_json)
     await db.commit()
-    await db.refresh(obj)
-    return obj 
+    await db.refresh(row)
+    return row
+
+@router.delete("/{cred_id}", status_code=status.HTTP_204_NO_CONTENT)
+async def delete_credential(cred_id: uuid.UUID, db: AsyncSession = Depends(get_db)) -> None:
+    row = await db.get(m.Credential, cred_id)
+    if row is None:
+        return
+    await db.delete(row)
+    await db.commit()
+    return
+
+class CredentialTestResult(BaseModel):
+    ok: bool
+    detail: Optional[str] = None
+
+@router.post("/{cred_id}/test", response_model=CredentialTestResult)
+async def test_credential(cred_id: uuid.UUID, db: AsyncSession = Depends(get_db)) -> CredentialTestResult:
+    row = await db.get(m.Credential, cred_id)
+    if row is None:
+        raise HTTPException(status_code=404, detail="Credential not found")
+    try:
+        from connectors.onyx.configs.constants import DocumentSource  # type: ignore
+        from connectors.onyx.connectors.factory import identify_connector_class  # type: ignore
+        from connectors.onyx.connectors.interfaces import CredentialsConnector  # type: ignore
+        src = getattr(DocumentSource, row.connector_name.upper())
+        conn_cls = identify_connector_class(src)
+        conn = conn_cls()
+        if hasattr(conn, 'load_credentials'):
+            # decrypt and load
+            creds = row.credential_json
+            conn.load_credentials(creds)
+        # basic validation if exposed
+        if hasattr(conn, 'validate_connector_settings'):
+            conn.validate_connector_settings()
+        return CredentialTestResult(ok=True)
+    except Exception as exc:  # noqa: BLE001
+        return CredentialTestResult(ok=False, detail=str(exc)) 
