@@ -304,3 +304,7 @@
 ### Added
 * Web: Connectors page to list credentials, start OAuth flows, and add static credentials. Linked in TopNav.
 * Backend: OAuth endpoints now support state storage (Redis or in-memory) and post-callback redirect to UI with `credential_id`.
+
+## 2025-08-10 (0.12.46)
+### Added
+* Set legacy tenant contextvar before connector runs to maximize compatibility with Onyx internals.
